--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-postcss": "^10.0.0",
     "gulp-sass": "^6.0.0",
     "gulp-uglify-es": "^3.0.0",
-    "sass": "^1.83.0"
+    "sass": "^1.83.0",
+    "slick-carousel": "^1.8.1"
   }
 }
