added product section

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "description": "",
   "devDependencies": {
     "@fancyapps/fancybox": "^3.5.7",
+    "@rateyo/jquery": "^3.0.0-alpha.2",
     "autoprefixer": "^10.4.20",
     "browser-sync": "^3.0.3",
     "gulp": "^5.0.0",
@@ -21,6 +22,7 @@
     "gulp-postcss": "^10.0.0",
     "gulp-sass": "^6.0.0",
     "gulp-uglify-es": "^3.0.0",
+    "rateyo": "^3.0.0-alpha.2",
     "sass": "^1.83.0",
     "slick-carousel": "^1.8.1"
   }
