--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "gulp-postcss": "^10.0.0",
     "gulp-sass": "^6.0.0",
     "gulp-uglify-es": "^3.0.0",
+    "ion-rangeslider": "^2.3.1",
+    "jquery-form-styler": "^2.0.2",
     "rateyo": "^3.0.0-alpha.2",
     "sass": "^1.83.0",
     "slick-carousel": "^1.8.1"
