--- a/package.json
+++ b/package.json
@@ -19,13 +19,18 @@
     "gulp-concat": "^2.6.1",
     "gulp-imagemin": "^9.1.0",
     "gulp-newer": "^1.4.0",
+    "gulp-nunjucks-render": "^2.2.3",
     "gulp-postcss": "^10.0.0",
-    "gulp-sass": "^6.0.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^6.0.1",
     "gulp-uglify-es": "^3.0.0",
     "ion-rangeslider": "^2.3.1",
     "jquery-form-styler": "^2.0.2",
     "rateyo": "^3.0.0-alpha.2",
     "sass": "^1.83.0",
     "slick-carousel": "^1.8.1"
+  },
+  "dependencies": {
+    "global": "^4.4.0"
   }
 }
