--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-autoprefixer": "^8.0.0",
     "gulp-clean": "^0.4.0",
     "gulp-concat": "^2.6.1",
+    "gulp-image": "^6.3.1",
     "gulp-imagemin": "^9.1.0",
     "gulp-newer": "^1.4.0",
     "gulp-nunjucks-render": "^2.2.3",
